k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pidev-backend
  namespace: pidev-prod
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: pidev-backend
  template:
    metadata:
      labels:
        app: pidev-backend
    spec:
      imagePullSecrets:
        - name: dockerhub-creds
      containers:
        - name: backend
          image: saif4584851/pidevxbm-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: http
          volumeMounts:
            - name: uploads-storage
              mountPath: /app/uploads
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
      volumes:
        - name: uploads-storage
          persistentVolumeClaim:
            claimName: pidev-uploads-pvc
