k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pidev-backend
  namespace: pidev-prod
spec:
  type: ClusterIP
  selector:
    app: pidev-backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
