k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pidev-frontend
  namespace: pidev-prod
spec:
  type: ClusterIP
  selector:
    app: pidev-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
