k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pidev-ingress
  namespace: pidev-prod
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  ingressClassName: nginx
  rules:
    - host: app.pidev.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: pidev-backend
                port:
                  number: 5000
          - path: /uploads
            pathType: Prefix
            backend:
              service:
                name: pidev-backend
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pidev-frontend
                port:
                  number: 80
